--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(logger)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(logger main.cpp logger.cpp logger.h)
+add_executable(logger main.cpp logger.cpp logger.h tests.h)
